--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "reactotron-react-native": "^5.1.7",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
