--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~51.0.8",
     "expo-status-bar": "~1.12.1",
     "lodash": "^4.17.21",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-reanimated": "~3.10.1",
@@ -22,6 +23,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "reactotron-react-native": "^5.1.7",
+    "tailwindcss": "3.3.2",
     "typescript": "~5.3.3"
   },
   "private": true
